samples/_failures_safe/1761309012_c2635c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_35d204fa.c: In function ‘main’:
./samples/SAFE/__tmp_35d204fa.c:174:5: error: expected expression at end of input
  174 |     for (
      |     ^~~
./samples/SAFE/__tmp_35d204fa.c:174:5: error: expected declaration or statement at end of input
